# VINS-Fusion

camera_models/: CMakeLists.txt
config/: vins_rviz_config.rviz
config/airsim/: airsim_unsync.yaml  left.yaml  right.yaml
config/habitat_sim/: habitat_sim.yaml
config/realsense/: realsense_stereo_imu_config.yaml
config/realsense_d435i/: realsense_stereo_imu_config.yaml  right.yaml
config/realsense_d435i_raven/: left.yaml  realsense_stereo_imu_config.yaml  right.yaml
config/rs_N3/: realsense_stereo_imu_config.yaml
config/uav_simulator/: uav_simulator.yaml
global_fusion/: CMakeLists.txt
log/: plot.py
loop_fusion/: CMakeLists.txt  package.xml
loop_fusion/include/CNN/: CNN_generic.h  onnx_generic.h  superpoint_common.h  superpoint_onnx.h
loop_fusion/include/OpenVINO/: openvino_ros.h  superpoint_help_functions.h
loop_fusion/include/loop_fusion/: loop_closure.h
loop_fusion/launch/: loop_fusion.launch
loop_fusion/msg/: LoopPairs.msg  StereoImage.msg
loop_fusion/src/: keyframe.cpp  keyframe.h  loop_closure_node.cpp  pose_graph.cpp  pose_graph.h  pose_graph_node.cpp
loop_fusion/src/CNN/: superpoint_common.cpp  superpoint_onnx.cpp
vins_estimator/: CMakeLists.txt
vins_estimator/launch/: test_stereo_feature.launch  vins copy.launch  vins.launch  vins_airsim.launch  vins_bag.launch  vins_cov.launch  vins_cov_uav_simulator.launch  vins_feature.launch  vins_fusion.launch  vins_raven.launch  vins_uav_simulator.launch
vins_estimator/src/: covarianceTest.cpp  featureTest.cpp  rosNodeTest.cpp  vins_uav_simulator.launch
(+13 files in other folders)
